--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <title>Kaká</title>
+        <link rel="stylesheet" href="=style.css">
+    </head>
+
+    <body>
 <h1><strong></strong>vida de Kaká</strong></h1>
 
 <p>Ricardo Izecson dos Santos Leite, mais conhecido como <em>Kaká</em>, é um ex-futebolista brasileiro, nascido em Brasília no dia 22 de abril de 1982.
@@ -7,3 +16,5 @@ O apelido Kaká foi dado pelo irmão do jogador, Rodrigo, que não conseguia pro
 Kaká estreou seu primeiro jogo em 2001 contra o time do Botafogo, no ano a seguir, entrou para a Seleção Brasileira jogando as copas de 2006 e 2010, ganhando uma copa. 
 Kaká saiu do clube brasileiro e seguiu rumo à carreira internacional, onde estreou em agosto de 2003 pelo Milan. Foi no time italiano que ele venceu a Liga dos Campeões em 2007.
 Com visibilidade internacional, foi forte candidato a levar para casa o título de Melhor Jogador do Ano pela FIFA em 2005 e 2006.</p>
+    </body>
+</html>
