criando arquivos style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>Ricardo Izecson dos Santos Leite, mais conhecido como <em>Kaká</em>, é um ex-futebolista brasileiro, nascido em Brasília no dia 22 de abril de 1982.
 O apelido Kaká foi dado pelo irmão do jogador, Rodrigo, que não conseguia pronunciar o nome Ricardo</p>
 
-<p></p>Quando ele tinha sete anos, a família do craque saiu de Brasília rumo à São Paulo. Aos oito anos, o jovem Kaká começou a jogar pelo São Paulo FC. Quando completou 15 anos, assinou o seu primeiro contrato. 
+<p>Quando ele tinha sete anos, a família do craque saiu de Brasília rumo à São Paulo. Aos oito anos, o jovem Kaká começou a jogar pelo São Paulo FC. Quando completou 15 anos, assinou o seu primeiro contrato. 
 Kaká estreou seu primeiro jogo em 2001 contra o time do Botafogo, no ano a seguir, entrou para a Seleção Brasileira jogando as copas de 2006 e 2010, ganhando uma copa. 
 Kaká saiu do clube brasileiro e seguiu rumo à carreira internacional, onde estreou em agosto de 2003 pelo Milan. Foi no time italiano que ele venceu a Liga dos Campeões em 2007.
 Com visibilidade internacional, foi forte candidato a levar para casa o título de Melhor Jogador do Ano pela FIFA em 2005 e 2006.</p>
