--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <body>
 <h1><strong></strong>vida de Kaká</strong></h1>
+<img id="kaká" src="kaká.jpg">
 
 <p>Ricardo Izecson dos Santos Leite, mais conhecido como <em>Kaká</em>, é um ex-futebolista brasileiro, nascido em Brasília no dia 22 de abril de 1982.
 O apelido Kaká foi dado pelo irmão do jogador, Rodrigo, que não conseguia pronunciar o nome Ricardo</p>
